--- a/header.css
+++ b/header.css
@@ -1,3 +1,8 @@
+body {
+    touch-action: none;
+    user-select: none;
+}
+
 /* Стили для навигационной панели */
 .nav-bar {
     position: fixed;
@@ -17,6 +22,10 @@
 /* Стили для элементов навигации */
 .nav-item {
     background: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
     border: none;
     cursor: pointer;
     padding: 10px;
@@ -24,16 +33,15 @@
     transition: transform 0.3s ease, background-color 0.3s ease;
 }
 
-/* Эффекты при наведении на элементы */
-.nav-item:hover svg {
-    fill: #671ecc
-}
-
-/* Эффекты при наведении на элементы */
-.nav-item:hover {
+/* Стили для активной кнопки */
+.nav-item.active {
     transform: scale(1.1); /* Увеличение при наведении */
     background-color: #5c5c5c0a;
 }
+
+.nav-item.active svg {
+    fill: #671ecc}
+
 
 /* Стили для изображений в элементах навигации */
 .nav-item img {
@@ -53,5 +61,10 @@
 /* Добавим небольшой отступ снизу, чтобы контент не прилипал к панели */
 #content.with-nav-bar {
     margin-bottom: 80px; /* Высота панели */
+}
+
+.nav-item span {
+    font-size: 14px;
+    color: #ababab;
 }
 
